--- a/style.css
+++ b/style.css
@@ -59,6 +59,8 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
+  flex-direction: row-reverse;
+  align-items: center;
   /* outline: 5px solid red; */
 }
 
