--- a/style.css
+++ b/style.css
@@ -5,6 +5,8 @@
   /* outline: 1px solid red; */
 }
 
+/* Menu CSS  */
+
 .menu-container {
   display: flex;
   justify-content: center;
@@ -29,6 +31,15 @@
   margin-left: 20px;
 }
 
+.social,
+.subscribe {
+  align-self: flex-end;
+  margin: 0 0 20px 0;
+  /* margin-bottom: 20px */
+}
+
+/* Header CSS  */
+
 .header-container {
   color: #5995da;
   background-color: #d6e9fe;
@@ -37,12 +48,14 @@
 }
 
 .header {
-  align-items: center;
   width: 900px;
   height: 300px;
   display: flex;
+  align-items: center;
   justify-content: space-between;
 }
+
+/* Images CSS  */
 
 /* Container ng photo grid, or Flex container*/
 .photo-grid-container {
@@ -59,7 +72,7 @@
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  flex-direction: row-reverse;
+  flex-direction: row;
   align-items: center;
   /* outline: 5px solid red; */
 }
@@ -72,4 +85,30 @@
   width: 300px;
   height: 300px;
   /* outline: 5px solid green; */
+}
+
+/* Changing order, swapped first item and the last item.  */
+.first-item {
+  order: 1;
+}
+
+.last-item {
+  order: -1;
+}
+
+/* Footer CSS */
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+
+.footer-item {
+  border: 5px solid #3700ff;
+  background-color: #D6E9FE;
+  height: 200px;
+  flex: 1;
+}
+
+.footer-three {
+  flex: 2;
 }
