--- a/style.css
+++ b/style.css
@@ -5,7 +5,18 @@
   /* outline: 1px solid red; */
 }
 
-/* Menu CSS  */
+/* 
+  Try lang HAHAHA
+  ============================
+  Styles for the Main Menu
+  ============================ 
+  This is for the styling of the main menu.
+
+  Usage: Acting as a navbar
+
+  Author: Alex
+  Date: August 6, 2025
+  */
 
 .menu-container {
   display: flex;
@@ -38,7 +49,9 @@
   /* margin-bottom: 20px */
 }
 
-/* Header CSS  */
+/* ============================
+  Styles for the Main Header
+  ============================ */
 
 .header-container {
   color: #5995da;
@@ -104,11 +117,60 @@
 
 .footer-item {
   border: 5px solid #3700ff;
-  background-color: #D6E9FE;
+  background-color: #d6e9fe;
   height: 200px;
   flex: 1;
 }
 
-.footer-three {
+/* .footer-three {
   flex: 2;
+} */
+
+.footer-one,
+.footer-three {
+  background-color: #5995da;
+  flex: initial;
+  width: 300px;
 }
+
+/* Auto-margins in flexbox are special. 
+They can be used as an alternative to an extra <div> when trying to align a group of items to the left/right of a container. 
+Think of auto-margins as a “divider” for flex items in the same container.*/
+.signup {
+  /* margin: 0 0 0 auto; */
+}
+/* Same lang ng epekto HAHA */
+.date {
+  margin-right: auto;
+}
+/* Auto-margins eat up all the extra space in a flex container,
+ so instead of distributing items equally,
+  this moves the .signup and any following items (.login) to the right side of the container.  */
+
+/* 
+  =======
+  Summary
+  =======
+Flexbox gave us a ton of amazing new tools for laying out a web page. 
+Compare these techniques to what we were able to do with floats, and it should be pretty clear that flexbox is a cleaner option for laying out modern websites:
+
+  Use display: flex; to create a flex container.
+  Use justify-content to define the horizontal alignment of items.
+  Use align-items to define the vertical alignment of items.
+  Use flex-direction if you need columns instead of rows.
+  Use the row-reverse or column-reverse values to flip item order.
+  Use order to customize the order of individual elements.
+  Use align-self to vertically align individual items.
+  Use flex to create flexible boxes that can stretch and shrink.
+  Remember that these flexbox properties are just a language that lets you tell browsers how to arrange a bunch of HTML elements. 
+  The hard part isn’t actually writing the HTML and CSS code, it’s figuring out, conceptually (on a piece of paper), the behavior of all the necessary boxes to create a given layout.
+
+When a designer hands you a mockup to implement, your first task is to draw a bunch of boxes on it and determine how they’re supposed to stack, stretch, and shrink to achieve the desired design. 
+Once you’ve got that done, it should be pretty easy to code it up using these new flexbox techniques.
+
+The flexbox layout mode should be used for most of your web pages, but there are some things it’s not-so-good at, 
+like gently tweaking element positions and preventing them from interacting with the rest of the page. 
+After covering these kinds of advanced positioning techniques in the next chapter, you’ll be an HTML and CSS positioning expert.
+  
+  
+  */
